# days

./: .gitignore  Makefile  README.md  \  days.opam  dune-project  go.mod  go.sum  main.go
.github/workflows/: go.yml  main.yml
cmd/hashgen/: main.go
cmd/serve/: main.go
lib/: dune
lib/chunks/: a.ml  a.mli  dune  lst.ml  lst.mli  p.ml  p.mli  root.ml  root.mli
lib/hello/: dune  hello.ml
lib/views/: dune  main.ml  main.mli
pkg/db/: db.go
pkg/handlers/: about.go  day.go  index.go  robots.go  upload.go
pkg/hash/: hash.go
pkg/img/: img.go
pkg/middleware/: pw_protect.go
templates/: about.html  base.html  img.html  index.html  upload.html
